# pantarei.py

./: Code_Of_Conduct.md  ReadMe.md  setup.cfg
pantarei/: __init__.py
