[metadata]
name = pantarei
version = 0.1
author = KOLANICH
url = https://github.com/KOLANICH/pantarei.py
description = Progress reporters abstraction layer
long_description = file: ReadMe.md
long_description_content_type =text/markdown
keywords = pantarei, παντα ρει, progress, πρoοδος, γραμμη, progressbar, spinner, abstraction layer
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
packages = pantarei

[options.extras_require]
tqdm = tqdm @ git+https://github.com/tqdm/tqdm
fish = fish @ git+https://github.com/lericson/fish
progress = progress @ git+https://github.com/verigak/progress/
progressbar2 = progressbar2 @ git+https://github.com/WoLpH/python-progressbar
#spinners = spinners @ git+https://github.com/ManrajGrover/py-spinners # just a collection of spinners
#halo = halo @ git+https://github.com/manrajgrover/halo # uses a separate thread
#yaspin = yaspin @ git+https://github.com/pavdmyt/yaspin # uses a separate thread
#progressor = progressor @ git+https://github.com/JosuaKrause/progressor
